{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 737,
  "lineage": "712f9df2-82c7-71bc-019a-87de84432517",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014348395ab0dcac8",
            "arn": "arn:aws:ec2:eu-west-3:477995668264:instance/i-099405217c475f029",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099405217c475f029",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Datascientest-jp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048cc8a1d3dee45a8",
            "private_dns": "ip-10-0-143-36.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.143.36",
            "public_ip": "15.237.253.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ed5c08481e40845",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041aa41589d24b8cb",
            "tags": {
              "Name": "Datascientest-Bastion"
            },
            "tags_all": {
              "Name": "Datascientest-Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05820113eb2c74703"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon-linux-2",
            "module.networking.aws_security_group.allow_ssh_pub",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014348395ab0dcac8",
            "arn": "arn:aws:ec2:eu-west-3:477995668264:instance/i-00b4e14c27968274f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b4e14c27968274f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Datascientest-jp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f495212eb418f998",
            "private_dns": "ip-10-0-150-97.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.150.97",
            "public_ip": "35.181.171.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cb4850d1ee14c21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecf1fec47a8088eb",
            "tags": {
              "Name": "Datascientest-Bastion"
            },
            "tags_all": {
              "Name": "Datascientest-Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05820113eb2c74703"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon-linux-2",
            "module.networking.aws_security_group.allow_ssh_pub",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02daa525e687622bb",
            "associate_with_private_ip": "10.0.128.0/20",
            "association_id": "eipassoc-04ad283f7ff712c0d",
            "domain": "vpc",
            "id": "eipalloc-02daa525e687622bb",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-082c1742d95904cd4",
            "private_dns": "ip-10-0-138-154.eu-west-3.compute.internal",
            "private_ip": "10.0.138.154",
            "public_dns": "ec2-13-36-28-56.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.28.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jp-elastic_ip_name_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-elastic_ip_name_eu-west-3a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db94763f666d4e8e",
            "associate_with_private_ip": "10.0.144.0/20",
            "association_id": "eipassoc-09b43b2efb4f04e38",
            "domain": "vpc",
            "id": "eipalloc-0db94763f666d4e8e",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-097be9973a497cc04",
            "private_dns": "ip-10-0-144-173.eu-west-3.compute.internal",
            "private_ip": "10.0.144.173",
            "public_dns": "ec2-15-188-110-109.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.110.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jp-elastic_ip_name_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-elastic_ip_name_eu-west-3a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:internet-gateway/igw-057299a2c2d6e0784",
            "id": "igw-057299a2c2d6e0784",
            "owner_id": "477995668264",
            "tags": {
              "Name": "jp-private-subnet"
            },
            "tags_all": {
              "Name": "jp-private-subnet"
            },
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02daa525e687622bb",
            "association_id": "eipassoc-04ad283f7ff712c0d",
            "connectivity_type": "public",
            "id": "nat-09597594b33b266af",
            "network_interface_id": "eni-082c1742d95904cd4",
            "private_ip": "10.0.138.154",
            "public_ip": "13.36.28.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041aa41589d24b8cb",
            "tags": {
              "Name": "jp-nat_gw_name_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-nat_gw_name_eu-west-3a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db94763f666d4e8e",
            "association_id": "eipassoc-09b43b2efb4f04e38",
            "connectivity_type": "public",
            "id": "nat-0e0ee78665f28fcc4",
            "network_interface_id": "eni-097be9973a497cc04",
            "private_ip": "10.0.144.173",
            "public_ip": "15.188.110.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ecf1fec47a8088eb",
            "tags": {
              "Name": "jp-nat_gw_name_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-nat_gw_name_eu-west-3a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:route-table/rtb-0ea4d6c531f62b857",
            "id": "rtb-0ea4d6c531f62b857",
            "owner_id": "477995668264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057299a2c2d6e0784",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.128.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09597594b33b266af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jp-rtb-public_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-rtb-public_eu-west-3a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.igw-public_subnets",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:route-table/rtb-0c96df89b45116bf7",
            "id": "rtb-0c96df89b45116bf7",
            "owner_id": "477995668264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057299a2c2d6e0784",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.144.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0ee78665f28fcc4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jp-rtb-public_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-rtb-public_eu-west-3a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.igw-public_subnets",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_public_subnets_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077379c54a462277c",
            "route_table_id": "rtb-0ea4d6c531f62b857",
            "subnet_id": "subnet-041aa41589d24b8cb"
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.igw-public_subnets",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c67b9a576c436f91",
            "route_table_id": "rtb-0c96df89b45116bf7",
            "subnet_id": "subnet-0ecf1fec47a8088eb"
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.igw-public_subnets",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:security-group/sg-0b9af7e6e0934faf1",
            "description": "Autoriser le trafic entrant SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9af7e6e0934faf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP uniquement a partir de clients VPC internes",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH uniquement a partir de clients VPC internes",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Datascientest-allow_ssh_priv",
            "name_prefix": "",
            "owner_id": "477995668264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Datascientest-allow_ssh_priv"
            },
            "tags_all": {
              "Name": "Datascientest-allow_ssh_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:security-group/sg-05820113eb2c74703",
            "description": "Autoriser le trafic entrant SSH et HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05820113eb2c74703",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP depuis Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH depuis Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Datascientest-allow_ssh",
            "name_prefix": "",
            "owner_id": "477995668264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Datascientest-allow_ssh_pub"
            },
            "tags_all": {
              "Name": "Datascientest-allow_ssh_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:subnet/subnet-0a791d18eab0555c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a791d18eab0555c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477995668264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:subnet/subnet-03ef289c5eeee2a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ef289c5eeee2a14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477995668264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:subnet/subnet-041aa41589d24b8cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041aa41589d24b8cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "477995668264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:subnet/subnet-0ecf1fec47a8088eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecf1fec47a8088eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "477995668264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "tags_all": {
              "Name": "jp-public-subnet_eu-west-3a"
            },
            "vpc_id": "vpc-0a48d3875bdbd98e6"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:477995668264:vpc/vpc-0a48d3875bdbd98e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08cc3f4712cef569d",
            "default_route_table_id": "rtb-005c92d0466f9cf87",
            "default_security_group_id": "sg-0dc2cdd0b3be0ca84",
            "dhcp_options_id": "dopt-04349c5dde306ec5e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a48d3875bdbd98e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005c92d0466f9cf87",
            "owner_id": "477995668264",
            "tags": {
              "Name": "jp-vpc"
            },
            "tags_all": {
              "Name": "jp-vpc"
            }
          }
        }
      ]
    }
  ]
}